fixed windows padding alignment

--- a/app/components/Room.styl
+++ b/app/components/Room.styl
@@ -1,5 +1,5 @@
 .room
-  width 234px
+  width 230px
   height 260px
   background-color #303639
   margin-left 58px
