--- a/app/components/RoomMenu.styl
+++ b/app/components/RoomMenu.styl
@@ -41,8 +41,7 @@
   width calc(100vw - 140px)
   padding-bottom 100px
   overflow-y scroll
-  padding-left 73px
-  padding-right 69px
+  padding-left 80px
   display flex
   flex-direction row
   justify-content flex-start
@@ -53,6 +52,6 @@
   width 40px
   height 40px
   margin-top 12.5px
-  margin-left 438px
+  margin-left calc(50vw - 163.5px)
   color #FEFEFE
   cursor pointer
